# singularity-garden

./: CMakeLists.txt  README.md  build.sh  build_windows.ps1
docs/: DESIGN.md
memory/: project_singularity_garden.md
shaders/common/: fullscreen.vert  noise.glsl  pbr.glsl  sdf.glsl
shaders/particles/: particles_update.comp
shaders/postfx/: atmospheric_glow.frag  bloom_blur.frag  bloom_prefilter.frag  color_enhance.frag  composite.frag  glitch_distortion.frag  temporal_aa.frag
shaders/scenes/: scene01_boot.frag  scene02_awakening.frag  scene03_city.frag  scene03_city.vert  scene03_ground.frag  scene03_ground.vert  scene04_fracture.frag  scene05_bloom.frag  scene06_impossible.frag  scene07_nebula.frag  scene07_singularity.frag  scene07_singularity.vert  scene_final.frag
src/: main.cpp
src/audio/: audio_system.cpp  audio_system.h
src/core/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  shader.cpp  shader.h  text.cpp  text.h
src/postfx/: postfx.cpp  postfx.h
src/scene/: scene.h  timeline.cpp  timeline.h
src/scenes/: scene01_boot.cpp  scene01_boot.h  scene02_awakening.cpp  scene02_awakening.h  scene03_city.cpp  scene03_city.h  scene04_fracture.cpp  scene04_fracture.h  scene05_bloom.cpp  scene05_bloom.h  scene06_impossible.cpp  scene06_impossible.h  scene07_singularity.cpp  scene07_singularity.h  scene_final.cpp  scene_final.h
